[gd_scene load_steps=10 format=3 uid="uid://b8bs6oc8x51fc"]

[ext_resource type="Texture2D" uid="uid://c4r4oly3pak5f" path="res://assets/icons/integrations/retroachievements.png" id="1_10gdt"]
[ext_resource type="Script" path="res://scenes/config/settings/integration/IntegrationRetroAchievements.gd" id="1_udj7d"]
[ext_resource type="Script" path="res://scenes/ui_nodes/LazyTextureRect.gd" id="2_esdcu"]
[ext_resource type="Script" path="res://scenes/ui_nodes/AccessibilityFocus.gd" id="3_yj2k7"]
[ext_resource type="Texture2D" uid="uid://c8q62d4ibs2c5" path="res://assets/icons/web.svg" id="4_hwksj"]
[ext_resource type="Texture2D" uid="uid://ie8bxicgj635" path="res://assets/icons/search.svg" id="5_j7jgf"]
[ext_resource type="Texture2D" uid="uid://ueyrfep0um7f" path="res://assets/icons/visibility_hidden.svg" id="6_cokjx"]
[ext_resource type="Texture2D" uid="uid://2ka3dyy8go0p" path="res://assets/icons/visibility_visible.svg" id="7_bychw"]

[sub_resource type="LabelSettings" id="LabelSettings_dm3pw"]
font_size = 30

[node name="RetroAchievements" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_udj7d")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="HBoxContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
size_flags_vertical = 0
texture = ExtResource("1_10gdt")
expand_mode = 3
script = ExtResource("2_esdcu")

[node name="IntegrationName" type="Label" parent="HBoxContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "RetroAchievements"
label_settings = SubResource("LabelSettings_dm3pw")

[node name="AccessibilityFocus" type="Node" parent="HBoxContainer/VBoxContainer/HBoxContainer/IntegrationName"]
script = ExtResource("3_yj2k7")

[node name="IntegrationDescription" type="Label" parent="HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Achievement support and tracking for retro-games"

[node name="IntegrationEnabled" type="CheckButton" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 4
text = "Enabled"

[node name="VBoxContainer2" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="OpenWebsite" type="Button" parent="HBoxContainer/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/icon_max_width = 20
text = "Open website"
icon = ExtResource("4_hwksj")

[node name="SetupGuide" type="Button" parent="HBoxContainer/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/icon_max_width = 20
text = "Setup guide"
icon = ExtResource("5_j7jgf")

[node name="HSeparator" type="HSeparator" parent="."]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Username: "

[node name="AccessibilityFocus" type="Node" parent="VBoxContainer/HBoxContainer/Label"]
script = ExtResource("3_yj2k7")

[node name="Username" type="LineEdit" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Web API key:"

[node name="AccessibilityFocus" type="Node" parent="VBoxContainer/HBoxContainer2/HBoxContainer/Label"]
script = ExtResource("3_yj2k7")

[node name="ShowPassword" type="TextureButton" parent="VBoxContainer/HBoxContainer2/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
focus_mode = 0
toggle_mode = true
texture_normal = ExtResource("6_cokjx")
texture_pressed = ExtResource("7_bychw")

[node name="WebAPI" type="LineEdit" parent="VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
secret = true

[node name="AccessibilityFocus" type="Node" parent="VBoxContainer/HBoxContainer2/WebAPI"]
script = ExtResource("3_yj2k7")

[connection signal="toggled" from="HBoxContainer/IntegrationEnabled" to="." method="_on_integration_enabled_toggled"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer2/OpenWebsite" to="." method="_on_open_website_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer2/SetupGuide" to="." method="_on_setup_guide_pressed"]
[connection signal="text_changed" from="VBoxContainer/HBoxContainer/Username" to="." method="_on_text_changed"]
[connection signal="toggled" from="VBoxContainer/HBoxContainer2/HBoxContainer/ShowPassword" to="." method="_on_show_password_toggled"]
[connection signal="text_changed" from="VBoxContainer/HBoxContainer2/WebAPI" to="." method="_on_text_changed"]
